--- a/views/partials/admin/sideBar.ejs
+++ b/views/partials/admin/sideBar.ejs
@@ -44,6 +44,13 @@
         </a>
       </li>
       <li class="nav-item">
+        <a href="/admin/sales" class="nav-link-custom">
+          <i class="bi bi-bar-chart me-2"></i>
+
+          <p class="mb-0 ms-2">Sales Report</p>
+        </a>
+      </li>
+      <li class="nav-item">
         <a href="/admin/coupons" class="nav-link-custom">
           <i class="bi bi-ticket-perforated me-2"></i>
           <p class="mb-0 ms-2">Coupons</p>
