--- a/views/user/userSignup.ejs
+++ b/views/user/userSignup.ejs
@@ -167,7 +167,7 @@
               </div>
               <div>
                 <a
-                  href="/auth/google"
+                  href="/auth/google?action=signup"
                   class="btn bg-white text-dark btn-outline-danger w-100 d-flex align-items-center justify-content-center"
                 >
                   <img
